# TouchController-iOSTest

./: .bazelrc  .buildifier.tables.json  .gitattributes  .gitignore  .gitmodules  BUILD.bazel  Cargo.toml  MODULE.bazel  NEWS-en.md  NEWS-zh.md  README.md  build.gradle.kts  gradle.properties  maven_install.json  neoforge_pin.txt  neoform_pin.txt  repin_all.sh  settings.gradle.kts
.woodpecker/: mdbook.yml
armorstand/: .bazelrc  (+7 more)
armorstand/blazerod/render/: BUILD.bazel
armorstand/blazerod/render/api/: BUILD.bazel  BlazeRodApi.template.kt
armorstand/blazerod/render/api/animation/: AnimationContexts.kt  AnimationItem.kt  BUILD.bazel
armorstand/blazerod/render/api/event/: BUILD.bazel  Event.kt  RenderEvents.kt
armorstand/blazerod/render/api/loader/: BUILD.bazel  ModelLoader.kt
armorstand/blazerod/render/api/refcount/: BUILD.bazel  RefCount.kt
armorstand/blazerod/render/api/render/: BUILD.bazel  Renderer.kt
armorstand/blazerod/render/api/resource/: BUILD.bazel  CameraTransform.kt  ModelInstance.kt  RenderExpression.kt  RenderNode.kt  RenderScene.kt  RenderTask.kt
armorstand/blazerod/render/expect/: BUILD.bazel
armorstand/blazerod/render/expect/render/: IrisApiWrapper.kt
armorstand/blazerod/render/fabric/: BUILD.bazel  BlazeRodFabric.kt  fabric.mod.json.template
armorstand/blazerod/render/fabric/render/: IrisApiWrapperImpl.kt
armorstand/blazerod/render/game/: BUILD.bazel
armorstand/blazerod/render/main/: BUILD.bazel  BlazeRod.kt
armorstand/blazerod/render/main/animation/: AnimationChannelItem.kt  AnimationItemImpl.kt  AnimationLoader.kt  BUILD.bazel
armorstand/blazerod/render/main/animation/context/: AnimationContextsImpl.kt  BUILD.bazel  BaseAnimationContext.kt  EntityAnimationContext.kt  LivingEntityAnimationContext.kt  PlayerEntityAnimationContext.kt
armorstand/blazerod/render/main/debug/: BUILD.bazel  ObjectCountTrackerFrame.kt  ObjectPoolTracker.kt  ResourceCountTracker.kt  ResourceCountTrackerFrame.kt
armorstand/blazerod/render/main/extension/: AddressModeExt.java  BUILD.bazel  GpuDeviceExt.java  NativeImageExt.kt  TextureFormatExt.java
armorstand/blazerod/render/main/extension/internal/: CommandEncoderExtInternal.java
armorstand/blazerod/render/main/layout/: BUILD.bazel  LayoutStrategy.kt
armorstand/blazerod/render/main/layout/test/: BUILD.bazel  Std140Test.kt  Std430Test.kt
armorstand/blazerod/render/main/mixin/: BUILD.bazel  RenderSystemMixin.java
armorstand/blazerod/render/main/mixin/gl/: GlBackendMixin.java  GlCommandEncoderMixin.java
armorstand/blazerod/render/main/render/: BUILD.bazel  BlazerodVertexFormats.kt  GpuIndexBuffer.kt  IrisApis.kt  RefCountedGpuBuffer.kt
armorstand/blazerod/render/main/render/gl/: ComputePassImpl.kt
armorstand/blazerod/render/main/runtime/: BUILD.bazel  ModelInstanceImpl.kt  RenderSceneImpl.kt  RenderTaskImpl.kt
armorstand/blazerod/render/main/runtime/data/: BUILD.bazel  LocalMatricesBuffer.kt  MorphTargetBuffer.kt  RenderSkinBuffer.kt
armorstand/blazerod/render/main/runtime/load/: BUILD.bazel  ModelLoadInfo.kt  ModelLoaderImpl.kt  ModelPreprocessor.kt  ModelResourceLoader.kt  SceneReconstructor.kt
armorstand/blazerod/render/main/runtime/node/: RenderNodeImpl.kt  TransformMap.kt  UpdatePhase.kt
armorstand/blazerod/render/main/runtime/renderer/: BUILD.bazel  ComputeShaderTransformRenderer.kt  CpuTransformRenderer.kt  PipelineInfo.kt  RendererImpl.kt  VertexShaderTransformRenderer.kt
armorstand/blazerod/render/main/runtime/resource/: CameraTransformImpl.kt  MorphTargetGroup.kt  RenderMaterial.kt  RenderPrimitive.kt  RenderSkin.kt  RenderTexture.kt
armorstand/blazerod/render/main/runtime/test/: BUILD.bazel  TransformMapTest.kt
armorstand/blazerod/render/main/systems/: BUILD.bazel  ComputePass.java  ComputePipeline.java
armorstand/blazerod/render/neoforge/: BUILD.bazel  BlazeRodNeoForge.kt
armorstand/game/: BUILD.bazel  neoforge_yarn_fix.tiny
armorstand/rule/tiny_remapper_worker/: AccessWidenerRemapper.java  BUILD.bazel  JarInJarRemover.java  MappingManager.java  PrintLogger.java
armorstand/rule/worker_api/: BUILD.bazel  WorkRequest.java  WorkResponse.java  Worker.java
blazerod/model/example-models/: BUILD.bazel
blazerod/model/model-pmd/: BUILD.bazel
blazerod/model/model-vmd/: BUILD.bazel
blazerod/render/expect/: BUILD.bazel
combine/example/hello_world/: BUILD.bazel  HelloWorldMod.kt
combine/example/hello_world/resources/: fabric.mod.json
combine/style/: BUILD.bazel
fastmerger/scanner/: BUILD.bazel  Main.java  ScannerWorker.java
fastmerger/scanner/classdeps/: BUILD.bazel  ClassDepsScanner.java  ClassInfo.java  ClassInfoCollector.java  ClassInfoVisitor.java  ClassNameMap.java
game/1.14.4/: BUILD.bazel
game/1.16.5/: BUILD.bazel
game/1.17.1/: BUILD.bazel
game/1.18.1/: BUILD.bazel
game/1.18.2/: BUILD.bazel
game/1.19.2/: BUILD.bazel
module/: android.MODULE.bazel  armorstand.MODULE.bazel  blazerod.MODULE.bazel  combine.MODULE.bazel  fabric.MODULE.bazel  llvm-mingw.MODULE.bazel  mdbook.MODULE.bazel  minecraft.MODULE.bazel  neoforge.MODULE.bazel  parchment.MODULE.bazel  rules.MODULE.bazel  rust.MODULE.bazel  zig_cc.MODULE.bazel
proxy-server-ios/: Cargo.toml
proxy-server-ios/src/: jni.rs  lib.rs  poller.rs
proxy-windows/: CMakeLists.txt  build.gradle.kts
proxy-windows/src/: input.cpp  lib-legacy.cpp  lib.cpp
rule/expect_actual_tools/test/: BUILD.bazel
rule/expect_actual_tools/test/actual/: BUILD.bazel
rule/expect_actual_tools/test/expect/: BUILD.bazel
rule/mapping_merger/: BUILD.bazel  MappingMerger.java  ParchmentFileReader.java
rule/mapping_merger/context/: BUILD.bazel  InputEntry.java  MappingFormat.java  MergeContext.java  ParchmentFileReader.java
rule/mapping_merger/operation/: BUILD.bazel  ChangeSourceNamespaceOperation.java  CompleteNamespaceOperation.java  ImportMappingOperation.java  Operation.java
rule/merge_expect_actual_jar/: BUILD.bazel  ExpectActualMerger.java
rule/modrinth_uploader/: BUILD.bazel
rule/vineflower/: BUILD.bazel  DecompilerWrapper.java  PrintWriterLogger.java
rule/worker_api/: BUILD.bazel  Worker.java
(+1226 files in other folders)
