"MODULE.bazel Combine part"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "org.jetbrains.kotlin:kotlin-compose-compiler-plugin-embeddable:2.2.20",
        "org.jetbrains.compose.runtime:runtime-desktop:1.7.1",
        "org.jetbrains.compose.runtime:runtime-saveable-desktop:1.7.1",
        "org.mini2Dx:universal-tween-engine:6.3.3",
    ],
)
