load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "style",
    srcs = glob(["*.kt"]),
    merge_deps = [
        "//combine/core/data",
        "//combine/core/paint",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:org_jetbrains_compose_runtime_runtime_desktop",
    ],
)
