load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "scanner",
    srcs = glob(["*.java"]),
    main_class = "top.fifthlight.fastmerger.scanner.ScannerWorker",
    deps = [
        "//:picocli",
        "//fastmerger/bindeps",
        "//fastmerger/scanner/classdeps",
        "//rule/worker_api",
        "@maven//:it_unimi_dsi_fastutil",
    ],
)
