load("//game:game.bzl", "game_version")

game_version(
    name = "game",
    client = "@minecraft//1.14.4:client",
    client_mappings = "@minecraft//1.14.4:client_mappings",
    intermediary = "@maven_fabric_1_14_4//:net_fabricmc_intermediary_v2",
    server = "@minecraft//1.14.4:server",
    server_legacy = True,
    version = "1.14.4",
    visibility = ["//visibility:public"],
)
