load("//game:game.bzl", "game_version")

game_version(
    name = "game",
    client = "@minecraft//1.16.5:client",
    client_mappings = "@minecraft//1.16.5:client_mappings",
    intermediary = "@maven_fabric_1_16_5//:net_fabricmc_intermediary_v2",
    server = "@minecraft//1.16.5:server",
    version = "1.16.5",
    visibility = ["//visibility:public"],
)
