load("//game:game.bzl", "game_version")

game_version(
    name = "game",
    client = "@minecraft//1.17.1:client",
    client_mappings = "@minecraft//1.17.1:client_mappings",
    intermediary = "@maven_fabric_1_17_1//:net_fabricmc_intermediary_v2",
    server = "@minecraft//1.17.1:server",
    version = "1.17.1",
    visibility = ["//visibility:public"],
)
