load("//game:game.bzl", "game_version")

game_version(
    name = "game",
    client = "@minecraft//1.18.1:client",
    client_mappings = "@minecraft//1.18.1:client_mappings",
    intermediary = "@maven_fabric_1_18_1//:net_fabricmc_intermediary_v2",
    server = "@minecraft//1.18.1:server",
    version = "1.18.1",
    visibility = ["//visibility:public"],
)
