load("//game:game.bzl", "game_version")

game_version(
    name = "game",
    client = "@minecraft//1.19.2:client",
    client_mappings = "@minecraft//1.19.2:client_mappings",
    intermediary = "@maven_fabric_1_19_2//:net_fabricmc_intermediary_v2",
    server = "@minecraft//1.19.2:server",
    version = "1.19.2",
    visibility = ["//visibility:public"],
)
