load("@rules_java//java:defs.bzl", "java_binary")

alias(
    name = "modrinth_uploader_wrapper",
    actual = "modrinth_uploader_wrapper.bash",
    visibility = ["//visibility:public"],
)

java_binary(
    name = "modrinth_token_saver",
    srcs = ["ModrinthTokenSaver.java"],
    main_class = "top.fifthlight.fabazel.modrinthuploader.ModrinthTokenSaver",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:de_swiesend_secret_service",
        "@maven//:org_slf4j_slf4j_api",
    ],
)

java_binary(
    name = "modrinth_uploader",
    srcs = [
        "ModrinthUploadData.java",
        "ModrinthUploader.java",
    ],
    main_class = "top.fifthlight.fabazel.modrinthuploader.ModrinthUploader",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:ch_qos_logback_logback_classic",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_github_mizosoft_methanol_methanol",
        "@maven//:de_swiesend_secret_service",
        "@maven//:org_slf4j_slf4j_api",
    ],
)
