load("@rules_java//java:defs.bzl", "java_binary")

java_binary(
    name = "vineflower",
    srcs = ["DecompilerWrapper.java"],
    main_class = "DecompilerWrapper",
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:org_vineflower_vineflower",
        "@fabric_loom//:vineflower_tiny_javadoc_provider",
        "//:picocli",
    ],
)
