load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "worker_api",
    srcs = ["Worker.java"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_worker_java//:worker_protocol_java_proto",
        "@bazel_worker_java//src/main/java/com/google/devtools/build/lib/worker:work_request_handlers",
    ],
)
