load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "worker_api",
    visibility = ["//visibility:public"],
    srcs = ["WorkRequest.java", "WorkResponse.java", "Worker.java"],
    deps = [
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
    ],
)
