load("@rules_java//java:defs.bzl", "java_library")

alias(
    name = "example-models",
    actual = ".",
    visibility = ["//visibility:public"],
)

alias(
    name = "alicia_solid_vrm",
    actual = "AliciaSolid.vrm",
    visibility = ["//visibility:public"],
)

alias(
    name = "armorstand_vrm",
    actual = "armorstand.vrm",
    visibility = ["//visibility:public"],
)

alias(
    name = "interpolation_test_glb",
    actual = "InterpolationTest.glb",
    visibility = ["//visibility:public"],
)

alias(
    name = "alicia_solid_mmd",
    actual = "Alicia",
    visibility = ["//visibility:public"],
)

alias(
    name = "alicia_solid_pmx",
    actual = "Alicia/Alicia_solid.pmx",
    visibility = ["//visibility:public"],
)

alias(
    name = "alicia_blade_pmx",
    actual = "Alicia/Alicia_blade.pmx",
    visibility = ["//visibility:public"],
)

java_library(
    name = "default_models",
    resource_strip_prefix = "blazerod/model/example-models",
    resources = ["armorstand.vrm"],
    visibility = ["//visibility:public"],
)
