load("@rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library", "kt_jvm_test")
load("//blazerod/model:model_info_jar.bzl", "model_info_jar")
load("//rule:merge_jar.bzl", "merge_jar")

model_info_jar(
    name = "mod_info_json",
    substitutions = {
        "${mod_id}": "blazerod-model-vmd",
        "${name}": "BlazeRod model VMD",
        "${description}": "VMD animation loading support.",
    },
)

kt_jvm_library(
    name = "model-vmd",
    srcs = glob(["*.kt"]),
    resource_jars = [
        ":mod_info_json",
        "//blazerod:icon",
    ],
    resource_strip_prefix = "blazerod/model/model-vmd/resources",
    resources = glob(["resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "//blazerod/model/model-base",
        "@maven//:it_unimi_dsi_fastutil",
        "@maven//:org_joml_joml",
    ],
)
