load("//rule:merge_library.bzl", "kt_merge_library")

kt_merge_library(
    name = "expect",
    srcs = glob(
        include = [
            "**/*.kt",
            "**/*.java",
        ],
        allow_empty = True,
    ),
    expect = True,
    visibility = ["//blazerod/render:__subpackages__"],
    deps = [
        "//blazerod/render/game:remapped_client_access_widened_named",
    ],
)
