load("//rule:merge_library.bzl", "kt_merge_library", "merge_library_jar")

kt_merge_library(
    name = "hello_world",
    srcs = glob(["*.kt"]),
    merge_deps = [
        "//combine/backend/minecraft/1.21.8",
        "//combine/data",
        "//combine/core/data",
        "//combine/core/screen",
        "//combine/core/widget/layout",
        "//combine/core/modifier",
        "//combine/core/modifier/placement",
        "//combine/core/layout",
        "//combine/widget",
    ],
    resource_strip_prefix = "combine/example/hello_world/resources",
    resources = glob(["resources/**"]),
    deps = [
        "//:compose",
        "//combine/example:remapped_client_access_widened_named",
        "//combine/example:remapped_deps",
        "@maven_fabric_1_21_8//:net_fabricmc_fabric_loader",
        "@minecraft//1.21.8:client_libraries",
    ],
)

java_binary(
    name = "dev_client",
    srcs = [],
    data = [
        "@minecraft_assets//:assets",
        "@minecraft_assets//:assets_1.21.8",
    ],
    env = {
        "LANG": "en_US.UTF8",
    },
    jvm_flags = [
        "-Dfabric.development=true",
        "-Ddev.launch.version=1.21.8",
        "-Ddev.launch.type=client",
        "-Ddev.launch.assetsPath=$(rlocationpath @minecraft_assets//:assets)",
        "-Ddev.launch.mainClass=net.fabricmc.loader.impl.launch.knot.KnotClient",
        "-Xmx4G",
    ],
    main_class = "top.fifthlight.fabazel.devlaunchwrapper.DevLaunchWrapper",
    runtime_deps = [
        "//game/1.21.8:game_client_named",
        "@minecraft//1.21.8:client_libraries",
        # Classpath separator
        "//game/1.21.8:game_mapping_jar",
        ":hello_world",
        "//rule/dev_launch_wrapper",
        "@maven_fabric_1_21_8//:io_github_llamalad7_mixinextras_fabric",
        "@maven_fabric_1_21_8//:net_fabricmc_fabric_language_kotlin",
        "@maven_fabric_1_21_8//:net_fabricmc_fabric_loader",
        "@maven_fabric_1_21_8//:net_fabricmc_sponge_mixin",
    ],
)
