load("@rules_java//java:defs.bzl", "java_library")

java_library(
    name = "context",
    srcs = glob(["*.java"]),
    visibility = ["//rule/mapping_merger:__subpackages__"],
    deps = [
        "@maven//:net_fabricmc_mapping_io",
        "@maven//:org_jetbrains_annotations",
        "@maven//:com_fasterxml_jackson_core_jackson_core",
    ],
)
